--- a/multiplayer-gameplay.html
+++ b/multiplayer-gameplay.html
@@ -481,15 +481,15 @@
 
         /* Results Phase */
         .results-screen {
-            padding: 20px 0;
+            padding: 10px 0;
         }
 
         .results-header {
             background: rgba(255, 255, 255, 0.12);
             backdrop-filter: blur(30px);
-            border-radius: 25px;
-            padding: 30px;
-            margin-bottom: 30px;
+            border-radius: 20px;
+            padding: 20px;
+            margin-bottom: 20px;
             text-align: center;
             border: 1px solid rgba(255, 255, 255, 0.25);
             box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
@@ -497,17 +497,17 @@
 
         .results-title {
             color: white;
-            font-size: 1.6rem;
-            font-weight: 800;
-            margin-bottom: 15px;
+            font-size: 1.2rem;
+            font-weight: 700;
+            margin-bottom: 12px;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            line-height: 1.4;
         }
 
         .results-summary {
             color: rgba(255, 255, 255, 0.9);
-            font-size: 1.2rem;
+            font-size: 1rem;
             font-weight: 600;
-            margin-bottom: 20px;
         }
 
         .correct-answer {
@@ -525,33 +525,33 @@
             background: linear-gradient(135deg, rgba(33, 150, 243, 0.2), rgba(33, 150, 243, 0.3));
             backdrop-filter: blur(30px);
             border: 2px solid rgba(33, 150, 243, 0.5);
-            border-radius: 25px;
-            padding: 25px;
-            margin-bottom: 30px;
+            border-radius: 20px;
+            padding: 18px;
+            margin-bottom: 20px;
             box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
         }
 
         .personal-result-title {
             color: #2196F3;
-            font-size: 1.3rem;
+            font-size: 1.1rem;
             font-weight: 800;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
             text-align: center;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
         }
 
         .personal-result-content {
             display: grid;
-            gap: 12px;
+            gap: 10px;
         }
 
         .personal-result-item {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 12px 15px;
+            padding: 10px 12px;
             background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
+            border-radius: 12px;
         }
 
         .personal-result-item.highlight {
@@ -561,32 +561,32 @@
 
         .personal-label {
             color: rgba(255, 255, 255, 0.9);
-            font-size: 1rem;
+            font-size: 0.9rem;
             font-weight: 600;
         }
 
         .personal-value {
             color: white;
-            font-size: 1.1rem;
+            font-size: 1rem;
             font-weight: 800;
         }
 
         .personal-result-item.highlight .personal-value {
             color: #FFD700;
-            font-size: 1.3rem;
+            font-size: 1.2rem;
         }
 
         .results-grid {
             display: grid;
-            gap: 18px;
-            margin-bottom: 30px;
+            gap: 12px;
+            margin-bottom: 20px;
         }
 
         .result-item {
             background: rgba(255, 255, 255, 0.12);
             backdrop-filter: blur(30px);
-            border-radius: 20px;
-            padding: 25px;
+            border-radius: 15px;
+            padding: 15px 18px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -597,12 +597,12 @@
         .player-result {
             display: flex;
             align-items: center;
-            gap: 18px;
+            gap: 12px;
         }
 
         .player-avatar {
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
             background: linear-gradient(135deg, #4facfe, #00f2fe);
             border-radius: 50%;
             display: flex;
@@ -610,7 +610,7 @@
             justify-content: center;
             color: white;
             font-weight: 800;
-            font-size: 1.1rem;
+            font-size: 1rem;
             box-shadow: 0 5px 20px rgba(79, 172, 254, 0.3);
         }
 
@@ -620,12 +620,12 @@
 
         .player-name {
             font-weight: 700;
-            font-size: 1.1rem;
-            margin-bottom: 5px;
+            font-size: 1rem;
+            margin-bottom: 3px;
         }
 
         .player-answer {
-            font-size: 0.9rem;
+            font-size: 0.85rem;
             opacity: 0.8;
             font-weight: 500;
         }
@@ -652,34 +652,34 @@
         .host-controls {
             background: linear-gradient(135deg, rgba(255, 215, 0, 0.1), rgba(255, 215, 0, 0.15));
             border: 2px solid rgba(255, 215, 0, 0.3);
-            border-radius: 20px;
-            padding: 25px;
-            margin-bottom: 25px;
+            border-radius: 15px;
+            padding: 15px;
+            margin-bottom: 15px;
             backdrop-filter: blur(20px);
         }
 
         .host-title {
             color: #FFD700;
             font-weight: 800;
-            font-size: 1.1rem;
-            margin-bottom: 20px;
+            font-size: 1rem;
+            margin-bottom: 12px;
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 8px;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
         }
 
         /* Navigation Buttons */
         .nav-buttons {
             display: grid;
-            gap: 18px;
-            margin-top: 25px;
+            gap: 12px;
+            margin-top: 15px;
         }
 
         .nav-btn {
-            padding: 20px;
-            border-radius: 20px;
-            font-size: 1.2rem;
+            padding: 14px;
+            border-radius: 15px;
+            font-size: 1rem;
             font-weight: 700;
             cursor: pointer;
             transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -687,7 +687,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 12px;
+            gap: 10px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
         }
 
@@ -875,7 +875,6 @@
     <div class="game-header fadeInUp">
         <div class="game-info">
             <div class="game-id">ID: <span id="game-id-display">LOADING</span></div>
-            <div class="question-counter">Frage <span id="question-number">1</span></div>
         </div>
         <div class="players-online">
             <div class="online-indicator"></div>
@@ -956,12 +955,9 @@
     <div class="game-phase" id="results-phase">
         <div class="results-screen">
             <div class="results-header fadeInUp">
-                <div class="results-title">📊 Ergebnis Frage <span id="results-round">1</span></div>
+                <div class="results-title" id="results-question-text">Lade Frage...</div>
                 <div class="results-summary" id="results-summary">
                     Berechne Ergebnisse...
-                </div>
-                <div class="correct-answer">
-                    ✅ Korrekte Antwort: <span id="correct-count">0</span> Spieler
                 </div>
             </div>
 
@@ -1676,7 +1672,7 @@
     // ===== UI FUNCTIONS =====
     function updateGameDisplay() {
         document.getElementById('game-id-display').textContent = gameState.gameId;
-        document.getElementById('question-number').textContent = currentQuestionNumber;
+        // question-number wurde aus dem Header entfernt
     }
 
     function updatePlayersCount() {
@@ -1906,10 +1902,13 @@
     }
 
     function displayRoundResults(results, actualYesCount) {
-        document.getElementById('results-round').textContent = currentQuestionNumber;
+        // Zeige die FRAGE als Titel statt "Ergebnis Frage X"
+        if (currentQuestion && currentQuestion.text) {
+            document.getElementById('results-question-text').textContent = currentQuestion.text;
+        }
+
         document.getElementById('results-summary').textContent =
-            `${actualYesCount} von ${totalPlayers || results.length} Spielern haben mit "Ja" geantwortet`;
-        document.getElementById('correct-count').textContent = actualYesCount;
+            `✅ ${actualYesCount} von ${totalPlayers || results.length} Spielern haben mit "Ja" geantwortet`;
 
         // Find current player's result
         const myResult = results.find(r => r.playerId === gameState.playerId);
@@ -1949,7 +1948,6 @@
             }
 
             const avatar = result.playerName.substring(0, 2).toUpperCase();
-            const answerText = result.answer ? 'Ja' : 'Nein';
             const sipsText = result.sips === 0 ? 'Perfekt! 🎯' : `${result.sips} 🍺`;
             const sipsClass = result.sips === 0 ? 'none' : '';
 
@@ -1961,12 +1959,14 @@
                 rankBadge = '<span style="color: #4CAF50; font-weight: 800; margin-left: 5px;">🏆 Wenigste</span>';
             }
 
+            // WICHTIG: Zeige NICHT ob Spieler Ja oder Nein gesagt hat
+            // Nur die Schätzung
             resultItem.innerHTML = `
                     <div class="player-result">
                         <div class="player-avatar">${avatar}</div>
                         <div class="player-info">
                             <div class="player-name">${result.playerName}${rankBadge}</div>
-                            <div class="player-answer">${answerText} • Tipp: ${result.estimation}</div>
+                            <div class="player-answer">Tipp: ${result.estimation}</div>
                         </div>
                     </div>
                     <div class="sips-penalty ${sipsClass}">${sipsText}</div>
